test/manifests/00-cert-manager-prereqs.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
spec:
  finalizers:
  - kubernetes
