test/manifests/instance-admission-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: kudo-system/kudo-webhook-server-certificate
  creationTimestamp: null
  name: kudo-manager-instance-admission-webhook-config
webhooks:
  - clientConfig:
      url: https://192.168.64.2:8443/admit-kudo-dev-v1beta1-instance
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: instance-admission.kudo.dev
    rules:
      - apiGroups:
          - kudo.dev
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - instances
        scope: Namespaced
    sideEffects: None

---
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURTakNDQWpLZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREE2TVRnd05nWURWUVFERXk5cmRXUnYKTFdOdmJuUnliMnhzWlhJdGJXRnVZV2RsY2kxelpYSjJhV05sTG10MVpHOHRjM2x6ZEdWdExuTjJZekFlRncweQpNREEwTWpNeE1UUXpNamhhRncweU16QTBNak14TVRRek1qaGFNRG94T0RBMkJnTlZCQU1UTDJ0MVpHOHRZMjl1CmRISnZiR3hsY2kxdFlXNWhaMlZ5TFhObGNuWnBZMlV1YTNWa2J5MXplWE4wWlcwdWMzWmpNSUlCSWpBTkJna3EKaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUEyUzZqSDJuSXhzRnR0S1NsU2YydXhLanhwR045V1lKZwordVJrQ1U0VFhEMkg3Q [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRRFpMcU1mYWNqR3dXMjAKcEtWSi9hN0VxUEdrWTMxWmdtRDY1R1FKVGhOY1BZZnNFbVhoYmRwLzA5aFhiY29uaHozTVJYOWc4VHBFaUlwTQphbDQyVFpncDUwbXJUZnZaL2FNMFl3TkJkeUJqOHNBWFZSajZnTUtvU2lqUUpBSW5pMjlSa0tKNUJCTFFLWjhMClBnY1d4d2lFK3ZhNTVBMk9RTU1zVVo2enpiMitwV1hhdWdqdG9VUzMzcjhqS1M1Q0FVdHFtdXN6d2hadk5PMVMKV2JSdXVyWUs3cUtDZkVTM1pkUWp4a0k0Sm4zVTJudmRlZm5LeFRwdXNYNUEzWHo0aXdDV1NUemhUK0JnY0xneQo4L011RDNlc0xOVHVFd [...]
kind: Secret
metadata:
  creationTimestamp: null
  name: kudo-webhook-server-secret
  namespace: kudo-system
type: kubernetes.io/tls
